2003-08-09  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-child-policy.h, cong-editor-node.c, cong-editor-node.h, cong-editor-widget.h, cong-editor-widget3.c

	CongEditorNodes now store their child policies and parent child policies, rather than it being stored in hash tables in the CongEditorWidget3

2003-08-08  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-widget3.c, plugin-paragraph-area-paragraph.c

	Fixed some build breakage
	
	* cong-editor-area-border.c, cong-editor-area-border.h, cong-editor-area-flow-holder-blocks.c

	Spacing improvements in new widget

	* cong-span-text-editor.c

	Added some begin/end edit pairs

2003-08-07  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-structural-tag.c

	Support for folding structural elements in new widget

	* cong-document.c, cong-editor-node-text.c, cong-location.c, cong-node-properties-dialog.c, cursor.c, select.c, tree.c

	Force all edits to be within a begin/end edit pair

2003-08-06  David Malcolm <david@davemalcolm.demon.co.uk>
